appId: br.gov.licitai.erp_licitai_mobile
---
- launchApp
- tapOn:
    id: "core_login_input_email"
- inputText: "admin@licitai.com.br"
- tapOn:
    id: "core_login_input_senha"
- inputText: "123456"
- tapOn:
    id: "core_login_btn_submit"
- assertVisible:
    id: "core_dashboard_txt_welcome"
